# Litera

./: .gitignore  .gitmodules  README.md  meson.build
app/: meson.build
app/litera/: app_menu.ui  litera_app.c  litera_app.h  litera_app_main_window.c  litera_app_main_window.h  litera_login_page.c  litera_login_page.h  litera_notepad_page.c  litera_notepad_page.h  litera_settings_page.c  litera_settings_page.h  login_menu.ui  login_page.ui  main.c  main_window.ui  meson.build  notepad_menu.ui  notepad_page.ui  resources.xml  settings.ui  settings_menu.ui
pkg/: meson.build
pkg/core/: backend.h  collections.h  content.c  content.h  litera_notebook_collection.c  meson.build  state.c  state.h  types.h
pkg/evernote-backend/: evernote-backend.c  evernote-backend.h  http-transport.c  http-transport.h  meson.build
pkg/evernote-sdk/: errors_types.c  errors_types.h  limits_types.c  limits_types.h  meson.build  note_store.c  note_store.h  note_store_types.c  note_store_types.h  types_types.c  types_types.h  user_store.c  user_store.h  user_store_types.c  user_store_types.h
pkg/fs-backend/: fs-backend.c  fs-backend.h  meson.build
